# homeshare

./: .gitignore  CHANGELOG.md  README.md  flake.nix  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: package.nix  pyproject.toml
cli/homeshare_cli/: client.py  config.py  main.py
cli/tests/: conftest.py  test_cli.py  test_client.py
lib/: package.nix  pyproject.toml
lib/homeshare_common/: duration.py
lib/tests/: test_duration.py
nixos/: module.nix
nixos/tests/: basic.nix  homeshare.home.arpa.cert.pem  homeshare.home.arpa.key.pem  kanidm.home.arpa.cert.pem  kanidm.home.arpa.key.pem
server/: package.nix  pyproject.toml
server/homeshare/: __init__.py  api.py  app.py  auth.py  config.py  models.py  storage.py  tokens.py  web.py  wsgi.py
server/homeshare/static/: main.js  style.css  time.js
server/homeshare/templates/: account.html  base.html  error.html  index.html  logged_out.html  share_detail.html  uploaded.html
server/migrations/: README.md  env.py
server/migrations/versions/: 294b07809a3f_initial_schema.py  bf9d67e81cdd_add_last_used_date_to_api_tokens.py
server/tests/: conftest.py  test_account.py  test_api.py  test_cleanup.py  test_config.py  test_migrations.py  test_models.py  test_routes.py  test_storage.py
