[project]
name = "homeshare-cli"
version = "0.1.0"
description = "CLI client for homeshare"
authors = [{ name = "Alex Martens", email = "alex+homeshare@thinglab.org" }]
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
dependencies = [
  "click>=8",
  "homeshare-common",
  "requests",
  "requests-toolbelt",
  "rich",
]

[project.urls]
Repository = "https://github.com/newAM/homeshare"
Changelog = "https://github.com/newAM/homeshare/blob/main/CHANGELOG.md"

[project.scripts]
homeshare = "homeshare_cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
