[project]
name = "homeshare-common"
version = "0.1.0"
description = "Shared utilities for homeshare"
authors = [{ name = "Alex Martens", email = "alex+homeshare@thinglab.org" }]
requires-python = ">=3.13"

[project.urls]
Repository = "https://github.com/newAM/homeshare"
Changelog = "https://github.com/newAM/homeshare/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest-cov", "pytest", "ruff", "ty"]
